--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+  <!-- fotn sansation -->
+  <link href="https://allfont.net/allfont.css?fonts=sansation-bold" rel="stylesheet" type="text/css" />
     <!-- ? MONTSERRAT FONT -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <!-- <link
